--- a/Jadwal Kelas XI TJKT 2/index.html
+++ b/Jadwal Kelas XI TJKT 2/index.html
@@ -17,12 +17,14 @@
   <!-- Header Section -->
   <header class="gradient-bg text-white py-6 px-4">
     <div class="container mx-auto relative">
-      <div class="absolute right-2 top-1/2 -translate-y-1/2">
-        <button id="theme-toggle" class="p-3 rounded-lg hover:bg-white/20 transition-all border border-white/30">
-          <i class="fas fa-moon text-white text-xl"></i>
-        </button>
+      <div class="flex flex-col">
+        <div class="self-end mb-4">
+          <button id="theme-toggle" class="p-3 rounded-lg hover:bg-white/20 transition-all border border-white/30">
+            <i class="fas fa-moon text-white text-xl"></i>
+          </button>
+        </div>
+        <h2 class="text-3xl md:text-4xl font-bold text-center">JADWAL KELAS XI TJKT 2</h2>
       </div>
-      <h2 class="text-3xl md:text-4xl font-bold text-center">JADWAL KELAS XI TJKT 2</h2>
     </div>
   </header>
 
