--- a/Jadwal Kelas XI TJKT 2/index.html
+++ b/Jadwal Kelas XI TJKT 2/index.html
@@ -16,15 +16,15 @@
 <body class="min-h-screen">  <!-- Header Section -->
   <header class="gradient-bg text-white py-6 px-4">
     <div class="container mx-auto flex flex-col sm:flex-row items-center justify-between relative">
-      <div class="order-2 sm:order-1 w-full sm:w-auto flex-1 flex justify-center sm:justify-center">
-        <h1 class="text-2xl xs:text-2xl sm:text-3xl md:text-4xl font-bold text-center px-4 pt-6 sm:pt-0 text-white transition-all duration-200">
-          JADWAL KELAS XI TJKT 2
-        </h1>
-      </div>
-      <div class="order-1 sm:order-2 w-full sm:w-auto flex justify-end absolute sm:static top-0 right-0 mt-2 sm:mt-0">
-        <button id="theme-toggle" class="p-3 sm:p-2 rounded-full hover:bg-white/10 transition-all">
+      <div class="order-1 sm:order-2 w-full sm:w-auto flex justify-end absolute sm:static top-0 right-0">
+        <button id="theme-toggle" class="p-2 rounded-full hover:bg-white/10 transition-all m-2">
           <i class="fas fa-moon text-white text-xl"></i>
         </button>
+      </div>
+      <div class="order-2 sm:order-1 w-full sm:w-auto flex-1 flex justify-center sm:justify-center">
+        <h1 class="text-2xl xs:text-2xl sm:text-3xl md:text-4xl font-bold text-center px-4 mt-12 sm:mt-0 text-white transition-all duration-200">
+          JADWAL KELAS XI TJKT 2
+        </h1>
       </div>
     </div>
   </header>
